# eyetech_1

./: .gitignore  CMakeLists.txt
lib/: lib.txt
send/: config.json  run.bat
send/lib/: config.json
src/: pikaqiu.cpp  sort.hpp
src/work/: pre_processing_image.cpp  send_data.cpp
